prevent long items in details view from wrapping lines

--- a/styles/data-atom.less
+++ b/styles/data-atom.less
@@ -252,7 +252,7 @@
     width: 6px;
     margin-right: 10px;
     font-size: 1em;
-    display: inline-block;
+    display: inline;
   }
 
   .resize-handle {
